neticms bug fixing from shemul vy exceltab

--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -1243,8 +1243,8 @@
       border-radius: 5px;
       // max-height: 270px;
       // max-width: 270px;
-      max-height: 200px;
-      max-width: 200px;
+      max-height: 180px;
+      max-width: 180px;
       /* object-fit: cover; */
       width: 100%;
     }
@@ -1261,16 +1261,16 @@
     margin-top: 35px;
     .grid-title {
       h3 {
-        font-size: $fontSizePrimary;
+        // font-size: $fontSizePrimary;
+        font-size: 23px;
         font-weight: $fontWeightPrimary;
         color: $orangeColor;
         display: block;
         display: -webkit-box;
-        /* max-width: 200px; */
-        -webkit-line-clamp: 1;
+        // -webkit-line-clamp: 1;
         -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        // overflow: hidden;
+        // text-overflow: ellipsis;
       }
     }
     .grid-subtitle-title {
