--- a/app/assets/scss/header.scss
+++ b/app/assets/scss/header.scss
@@ -3,7 +3,7 @@
   .logo-wrapper {
     height: 120px;
     width: 120px;
-    background: #fff;
+    background: $primaryColorDark;
     padding: 5px;
     img {
       height: 110px;
