neticms bug fixing

--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -535,7 +535,7 @@
     position: absolute;
     content: '';
     height: 56px;
-    width: 20px;
+    width: 12px;
     background-color: #ff4e31;
     bottom: -56px;
     margin: 0px 0px 0 -9px;
@@ -590,7 +590,7 @@
   // }
 
   .login-btn {
-    padding: 20px 15px;
+    padding: 12px 15px;
     background: $orangeColor;
     color: #ffffff;
     font-size: 20px;
@@ -618,17 +618,17 @@
     &::before {
       position: absolute;
       content: '';
-      height: 20px;
-      width: 68%;
+      height: 15px;
+      width: 44%;
       background-color: $orangeColor;
-      top: -40px;
+      top: -35px;
     }
 
     &::after {
       position: absolute;
       content: '';
       height: 76px;
-      width: 20px;
+      width: 13px;
       background-color: $orangeColor;
       top: -76px;
     }
@@ -636,7 +636,7 @@
     .login-btn {
       background: $primaryColorLight;
       width: 200px;
-      height: 80px;
+      height: 64px;
       border-radius: 10px;
       position: relative;
 
@@ -1527,7 +1527,7 @@
         overflow: hidden;
 
         img {
-          height: 300px;
+          height: 220px;
           width: 100%;
           max-width: 500px;
           object-fit: cover;
@@ -1629,7 +1629,7 @@
   // padding-bottom: 20px;
   margin-left: 0px !important;
   margin-right: 0px !important;
-  display: flex;
+  // display: flex;
   align-items: center;
 
   .student-info-table {
